--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
          });
             $("input[id='weight_input']").on('focusin', function(){
                $(this).data('val', $(this).val());
+               $(this).parent("div").draggable( 'disable' );
             });
 
             $("input[id='weight_input']").change(function() {
@@ -246,6 +247,7 @@
                if($(this).parent("div").data("current_number") == "2" || $(this).parent("div").data("current_number") == "4" || $(this).parent("div").data("current_number") == "6" || $(this).parent("div").data("current_number") == "8" || $(this).parent("div").data("current_number") == "10" || $(this).parent("div").data("current_number") == "12") {
                   document.getElementById("rightWeight").value = parseFloat(document.getElementById("leftWeight").value) + parseFloat(current) - parseFloat(prev);
                }
+               $(this).parent("div").draggable( 'enable' );
             });
          });
       </script>
