--- a/index.html
+++ b/index.html
@@ -455,6 +455,8 @@
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
 		      <input style="width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
 		    </div>
+          <div style="clear:both"></div>
+          <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fyeedaleehey.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=github.svg&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
          </div>
 	</body>
 </html>
