--- a/dragonboat.html
+++ b/dragonboat.html
@@ -303,7 +303,7 @@
              <a class="py-2 d-none d-md-inline-block" href="#">About</a>
          </div>
        </nav>
-       <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+       <div class="position-relative overflow-hidden m-md-3 text-center bg-light">
          <div class="container">
 
             <div class="row justify-content-md-center">
