--- a/dragonboat.html
+++ b/dragonboat.html
@@ -303,24 +303,226 @@
              <a class="py-2 d-none d-md-inline-block" href="#">About</a>
          </div>
        </nav>
-       <div class="position-relative overflow-hidden m-md-3 text-center bg-light">
+       <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
          <div class="container">
 
             <div class="row justify-content-md-center">
-               <div class="col-md-4 col-xs-12">
-                  <input readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value="左列總重"></input>
+               <input readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value="左列總重"></input>
+               <input readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value="右列總重"></input>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <input id="leftWeight" readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value=0></input>
+               <input id="rightWeight" readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value=0></input>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名" value="郭佬"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重" value="80"></input>
                </div>
-               <div class="col-md-4 col-xs-12">
-                  <input readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value="右列總重"></input>
+               <div class="blank"></div>
+               <div class="squaredotted">1</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">2</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
                </div>
             </div>
    
             <div class="row justify-content-md-center">
-               <div class="col-md-4 col-xs-12">
-                  <input id="leftWeight" readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value=0></input>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
                </div>
-               <div class="col-md-4 col-xs-12">
-                  <input id="rightWeight" readonly="readonly" style="width: 230px;text-align: center;background: transparent;border: none; font-size: 35;" value=0></input>
+               <div class="blank"></div>
+               <div class="squaredotted">3</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">4</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">5</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">6</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">7</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">8</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">9</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">10</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">11</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">12</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">13</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">14</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">15</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">16</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">17</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">18</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+            </div>
+   
+            <div class="row justify-content-md-center">
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">19</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
+               </div>
+               <div class="blank"></div>
+               <div class="squaredotted">20</div>
+               <div class="blank"></div>
+               <div class="square">
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" placeholder="姓名"></input>
+                  <input style="height: 20px; width: 70px; margin-top: 5px;text-align: center;" type="text" id="weight_input" placeholder="體重"></input>
                </div>
             </div>
          </div>
